@@ -1062,9 +1062,13 @@ if(typeof(luga) === "undefined"){
 
 	/**
 	 * Attach form validators to any suitable form inside the document
+	 * @param {jquery} rootNode
 	 */
-	luga.validator.initForms = function(){
-		jQuery(luga.validator.CONST.FORM_SELECTOR).each(function(index, item){
+	luga.validator.initForms = function(rootNode){
+		if(rootNode === undefined){
+			rootNode = jQuery("body");
+		}
+		rootNode.find(luga.validator.CONST.FORM_SELECTOR).each(function(index, item){
 			var formNode = jQuery(item);
 			/* istanbul ignore else */
 			if(formNode.attr(luga.validator.CONST.CUSTOM_ATTRIBUTES.VALIDATE) === "true"){
