@@ -1,6 +1,8 @@
-<form id="basic" data-lugavalidator-validate="true">
-	<fieldset>
-		<input type="text" id="myName" name="myName" data-lugavalidator-required="true" data-lugavalidator-errorclass="invalid" data-lugavalidator-message="Invalid!"/>
-		<input id="submit" type="submit" data-lugavalidator-disabledlabel="I am disabled" value="Submit"/>
-	</fieldset>
-</form>
+<div class="container">
+	<form id="basic" data-lugavalidator-validate="true">
+		<fieldset>
+			<input type="text" id="myName" name="myName" data-lugavalidator-required="true" data-lugavalidator-errorclass="invalid" data-lugavalidator-message="Invalid!"/>
+			<input id="submit" type="submit" data-lugavalidator-disabledlabel="I am disabled" value="Submit"/>
+		</fieldset>
+	</form>
+</div>
